[tool.poetry]
name = "zodchy"
version = "0.4.4"
description = "Collection of contracts and tools for building CQRS applications"
authors = ["Smairon <man@smairon.ru>"]
maintainers = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy"


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
mypy= "^1.11.1"

[tool.mypy]
disable_error_code = "import-untyped"
